--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 	<form>
 		<input type="text" id="result" disabled>
 		<div class="keypad">
+			<button type="button" class="operator" value="(" onclick="addToInput('(')">(</button>
+			<button type="button" class="operator" value=")" onclick="addToInput(')')">)</button>
+			<button type="button" class="operator" onclick="addToInput('%')">%</button>
+			<button type="button" class="operator" value="+" onclick="addToInput('+')">+</button>
+
 			<button type="button" value="9" onclick="addToInput('9')">9</button>
 			<button type="button" value="8" onclick="addToInput('8')">8</button>
 			<button type="button" value="7" onclick="addToInput('7')">7</button>
@@ -28,8 +33,8 @@
 			
 			<button type="reset" class="clear" onclick="clearInput()">C</button>
 			<button type="button" value="0" onclick="addToInput('0')">0</button>
+			<button type="button" value="." onclick="addToInput('.')">.</button>
 			<button type="button" class="calculate" onclick="calculate()">=</button>
-			<button type="button" class="operator" value="+" onclick="addToInput('+')">+</button>
 		</div>
 	</form>
 </div>
